refactoring cacluator - add date into calculate result